--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-simple-timestamp-to-date": "^1.0.3",
     "spinners-react": "^1.0.6",
     "styled-components": "^5.3.3"
