--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^9.15.0",
+    "firebase": "^9.6.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "react-simple-timestamp-to-date": "^1.0.3",
     "spinners-react": "^1.0.6",
     "styled-components": "^5.3.3"
